# rusk

./: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.ephemeral  Dockerfile.persistent  INSTALLATION.md  Makefile  README.md  RELEASE.md  RELEASE_GUIDE.md  agents.md  basic_fields.proto  bid.proto  blindbid.proto  build.rs  echo.proto  go.mod  justfile  release.toml  rusk.proto  rust-toolchain  rust-toolchain.toml  sgconfig.yml  stake.proto  test_mainnet.sh  transaction.proto
circuits/bid/: CHANGELOG.md  Cargo.toml  Makefile  README.md
circuits/blindbid/: CHANGELOG.md  Cargo.toml  Makefile  README.md
circuits/license/: CHANGELOG.md  Cargo.toml  Makefile
circuits/transfer/: CHANGELOG.md  Cargo.toml  Makefile
consensus/: CHANGELOG.md  Cargo.toml  Makefile  README.md  rust-toolchain  test-harness.sh
consensus/benches/: merkle.rs
consensus/example/: consensus_service.rs  main.rs  mocks.rs  network_service.rs  node.rs  wire.rs
consensus/src/: aggregator.rs  agreement.rs  commons.rs  config.rs  consensus.rs  contract_state.rs  errors.rs  event_loop.rs  execution_ctx.rs  frame.rs  iteration_ctx.rs  lib.rs  merkle.rs  messages.rs  msg_handler.rs  operations.rs  phase.rs  queue.rs  quorum.rs  ratification.rs  round_ctx.rs  secondstep.rs  selection.rs  state_root.rs  step.rs  step_votes_reg.rs  user.rs  util.rs
consensus/tests/: consensus_harness.rs  consensus_property.rs  provisioners.txt  sortition.rs
contract-helpers/: Cargo.toml  Makefile
contract-helpers/src/: collection.rs  lib.rs
contracts/alice/: Cargo.toml  Makefile
contracts/bid/: Cargo.toml  Makefile  README.md
contracts/bob/: Cargo.toml  Makefile
core/: CHANGELOG.md  Cargo.toml  Makefile  README.md
core/src/: abi.rs  error.rs  lib.rs  serde_support.rs  stake.rs  transfer.rs
core/tests/: serde.rs  serialization.rs  transaction.rs
data-driver/: Cargo.toml
data-driver/src/: error.rs  lib.rs
execution-core/: CHANGELOG.md  Cargo.toml  Makefile
execution-core/src/: bytecode.rs  dusk.rs  error.rs  hash.rs  lib.rs  license.rs  reader.rs  serde_support.rs  stake.rs  transfer.rs  tx.rs
execution-core/tests/: serialization.rs  transaction.rs
node/: .env  CHANGELOG.md  Cargo.toml  Makefile  README.md  RUES.md  default.config.toml  mempool.proto  pipelines.example.json  testbed.sh  testbed.toml
node-common/: Cargo.toml
node-common/src/: encoding.rs  ledger.rs  lib.rs
node-data/: CHANGELOG.md  Cargo.toml  Makefile  README.md
node-data/src/: archive.rs  bls.rs  encoding.rs  events.rs  hard_fork.rs  ledger.rs  lib.rs  message.rs
node/.sqlx/: query-05069f1a3f24ca8607a183741620c053d0ef342fec427d3689d181acc8fa78d2.json  query-05fce30d5a98ddd16d99e514ca67ed00e2a1d3831b158e665e9f6204d9d7c314.json  query-0ea0095fd1d173e4d259bce7877000866b46c0e5c5bdbc39721dd993b831533e.json  query-0f5a3fff7b406706f073719b623b2464bbdae93841b19e103928364e2b60ddf0.json  query-13807a5e27b376c2e9f7566d0ce92ed42556487d0c87f490f50efb647df3d6fb.json  query-14e22bec4a8a50d407955a5db5fdf66138a9e1a0f14967134e3f2370d12d3173.json  query-22135e0afad32fbbd710ad9074941e5aabc27309200949081fe2bd153421ef7e.json  query-2e969dc8fe8501fa7e09dbcccd849f7fd2ce8e48926ff1cd218b465fae74968c.json  query-31801aeca4aa835ca1ec5a27cfc0561d9b67031fb25026a53da9c2d097c9e1ae.json  query-3e24aeef004c78f2589f716a35334e0e0e8d5404de9fc039c3597f86cd175424.json  query-4076d67e574de4da9ad5eafea6a77f25f2bd669b75f0bcd4298267e8de6a631e.json  query-4c90fe749d3dbd3f04844450d966f88395b35949d9a213891f7eb1b0ccbc2fff.json  query-56e2b507ef0b75a8ce74c034caa97c769a0fdd06dd02daf0a589f94191104333.json  query-57cb3510ebca13bbacf5aead1f7c8cf72e468e23e8c2d1ce57df9a0f8ce2ae1d.json  query-615a87effc582024c4b36d63d0ac5a9a0a4b1e6e7385e715a50025bff7509fdf.json  query-6c94f167efd5efed0ad4467a8e70242c67cce76460cee23eb2a86c62954bad34.json  query-71fbbf3af70ba14c9b331ccce7a6798fb531ff31373ea401f5fc3dd2f511a4a3.json  query-73c5109243d2b9b862901f7d5f926fcb91d0a52d5f5cd7afd591bfb2c40b08e6.json  query-7682947ac9f1cd27e40469508cc2a0655d38b6dbc75aa3e0e4c2e16b3e51b047.json  query-787116727e409c76887216f51fb5a727222d9d2c9c4130070ba9a49ae7b91adc.json  query-7a2dc6e116073e92b9f72fd9ae7ec75934ba4a9eca28397dfb38f9ba4707965a.json  query-92b10bb32c1ff3780695268d17b1e88cfbc31fa40b351455bf770d4526ff2f9d.json  query-92d1fbef465114b1b5cf9fd4bd2c5de7cf64f166957e61082f1a02b9b1988ae2.json  query-961a637bd4e5213548bc28bf778886a299f35fa14aa4cfd8b4757c6eb194b94f.json  query-9e14c9a194a6f2ee32003bef28c1cd10fd4c7258dae6dd385816af598a7076a0.json  query-abd18d06a7da9d6b3f2daa50050bfaf689f8464a21c85b7131bf854f5d2b1bb7.json  query-acba7d8e6a50f8279bf358d48ef6273c5e8ba284b3baa1cc0114ec317e256606.json  query-ae0dc62cbb8294c5cf1ce4e209fdb56387e39a5052a25950bde5f4d63b8f1c30.json  query-b036605cde2dea32d5589df5a6ee440275a51a91b52a02eafa9c0894aa9bde3a.json  query-bcbb0d11eb03eb64a816d21949517d3fe9c752282b47dd9eb585ece824a0867e.json  (+12 more)
node/benches/: accept.rs
node/src/: archive.rs  (+9 more)
rusk/: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  default.config.toml  jsonrpc_server_config.toml  mainnet.config.toml  run_tests.sh  rusk.proto
rusk-abi/: CHANGELOG.md  Cargo.toml  Makefile  README.md
rusk-profile/: CHANGELOG.md  Cargo.toml  Makefile  README.md
rusk-prover/: CHANGELOG.md  Cargo.toml  Makefile  README.md
rusk-recovery/: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  dusk.cpk  faucet.psk  genesis.rs  provisioners.rs  state.rs
rusk-schema/: CHANGELOG.md  Cargo.toml  README.md  build.rs
rusk-test/: CHANGELOG.md  Cargo.toml  Makefile  README.md
rusk-wallet/: CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE.md  build.rs  config.toml  default.config.toml  my_first_contract.wasm  wapm.toml
stake/: Cargo.toml
test-wallet/: Cargo.toml
transfer/: Cargo.toml
vm/: CHANGELOG.md  Cargo.toml  Makefile  README.md
wallet-core/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  asyncify.sh  cbindgen.toml  package.json  rust-toolchain
wallet-fs/: Cargo.toml  Makefile
(+2241 files in other folders)
