[workspace]
members = [
    # Test contracts
    "contracts/alice",
    "contracts/bob",
    "contracts/charlie",
    "contracts/host_fn",

    # Genesis contracts
    "contracts/stake",
    "contracts/transfer",

    "data-drivers/data-driver",
    "data-drivers/transfer-contract",
    "data-drivers/stake-contract",

    "core",
    "vm",
    "wallet-core",

    "rusk-prover",

    "rusk-recovery",
    "rusk-profile",
    "rusk",

    "node-data",
    "consensus",
    "node",
    "rusk-wallet",

]
resolver = "2"

[workspace.dependencies]
# Workspace internal dependencies
# dusk-consensus = "1.2.0"
dusk-consensus = { version = "1.2.1-alpha.1", path = "./consensus/" }
dusk-core = "1.2.1"
# dusk-core = { version = "1.2.2-alpha.1", path = "./core/" }
dusk-vm = "1.2.0"
# dusk-vm = { version = "1.2.1-alpha.1", path = "./vm/" }
# node = { version = "1.2.0", package = "dusk-node" }
node = { version = "1.2.1-alpha.1", path = "./node/", package = "dusk-node" }
# node-data = { version = "1.2.0", package = "dusk-node-data" }
node-data = { version = "1.2.1-alpha.1", path = "./node-data/", package = "dusk-node-data" }
rusk-profile = "1.0.1"
# rusk-profile = { version = "1.0.2-alpha.1", path = "./rusk-profile/" }
rusk-prover = "1.1.0"
# rusk-prover = { version = "1.1.1-alpha.1", path = "./rusk-prover/" }
rusk-recovery = "1.0.3"
# rusk-recovery = { version = "1.0.4-alpha.1", path = "./rusk-recovery/" }
wallet-core = { version = "1.1.0", package = "dusk-wallet-core" }
# wallet-core = { version = "1.1.1-alpha.1", path = "./wallet-core/", package = "dusk-wallet-core" }

dusk-data-driver = { version = "0.0.1-alpha.1", path = "./data-drivers/data-driver" }
dusk-transfer-contract-dd = { version = "0.0.1-alpha.1", path = "./data-drivers/transfer-contract" }
dusk-stake-contract-dd = { version = "0.0.1-alpha.1", path = "./data-drivers/stake-contract" }

# Dusk dependencies outside the workspace
bls12_381-bls = { version = "0.5", default-features = false }
dusk-bls12_381 = { version = "0.14", default-features = false }
dusk-bytes = "0.1.7"
dusk-jubjub = { version = "0.15.0", default-features = false }
dusk-merkle = "0.5.3"
dusk-plonk = { version = "0.21.0", default-features = false }
dusk-poseidon = "0.41"
jubjub-schnorr = { version = "0.6", default-features = false }
kadcast = "0.7"
phoenix-circuits = { version = "0.6", default-features = false }
phoenix-core = { version = "0.34.0", default-features = false }
piecrust = "0.28.0"
piecrust-uplink = "0.18.0"
poseidon-merkle = "0.8"

# External dependencies
aes = "0.7.5"
anyhow = "1.0.89"
ark-bn254 = { version = "0.4", default-features = false }
ark-groth16 = { version = "0.4", default-features = false }
ark-relations = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
async-channel = "1.9"
async-graphql = "5.0.10"
async-trait = "0.1.83"
base64 = "0.22.1"
blake2b_simd = { version = "1.0.2", default-features = false }
blake3 = { version = "1.5.4", default-features = false }
block-modes = "0.8.1"
bs58 = "0.4"
bytecheck = { version = "0.6.12", default-features = false }
cargo_toml = "0.15.3"
chrono = "0.4.38"
clap = "4.4.18"
console = "0.12"
criterion = "0.5.1"
crossterm = "0.25"
dirs = "4.0"
dlmalloc = "0.2.6"
fake = "2.9.2"
ff = { version = "0.13", default-features = false }
flate2 = "1.0.33"
flume = "0.10.14"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
hkdf = "0.12.3"
http-body-util = "0.1.2"
http_req = "0.8.1"
humantime-serde = "1.1.1"
hyper = "1.4.1"
hyper-tungstenite = "0.13"
hyper-util = "0.1.9"
inquire = "0.7.5"
konst = "0.3.9"
lazy_static = "1.5"
lru = "0.12.4"
memory-stats = "1.2"
metrics = "0.22.3"
metrics-exporter-prometheus = "0.14"
native-tls = { version = "<0.2.14" } # 0.2.14 requires rustc 1.80.0
num-bigint = { version = "0.4.6", default-features = false }
once_cell = "1.19"
open = "2.1.3"
parking_lot = "0.12.3"
pin-project = "1.1.5"
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
reqwest = "0.12.7"
ringbuffer = "0.15"
rkyv = { version = "0.7.39", default-features = false }
rocksdb = { version = "0.22", default-features = false }
rustc_tools_util = "0.3"
rustls-pemfile = "2.1.3"
semver = "1.0.23"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
serde_with = "3.9"
sha2 = { version = "0.10.8", default-features = false }
sha3 = "0.10.8"
smallvec = "1.13.2"
sqlx = "0.8.2"
tar = "0.4.42"
tempfile = "3.12"
thiserror = "1.0.64"
time-util = "0.3.4"
tiny-bip39 = "0.8.2"
tokio = "1.40"
tokio-rustls = "0.26"
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
toml = "0.7.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tungstenite = "0.21"
url = "2.5.2"
version_check = "0.9.5"
wasm-bindgen = "0.2"
zeroize = { version = "1.8.1", default-features = false }
zip = "0.5.13"

[profile.dev.build-override]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.release.build-override]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.release.package.stake-contract]
overflow-checks = true

[profile.release.package.transfer-contract]
overflow-checks = true

[profile.release.package.rusk-wallet]
overflow-checks = true
