[workspace]
members = [
    "data-drivers/data-driver",
    "data-drivers/transfer-contract",
    "data-drivers/stake-contract",

    "core",
    "vm",
    "wallet-core",

    "rusk-prover",

    "rusk-recovery",
    "rusk-profile",
    "rusk",
    "rusk-test",

    "node-data",
    "consensus",
    "node",
    "rusk-wallet",

]
resolver = "2"

[workspace.package]
rust-version = "1.85"
license = "MPL-2.0"
edition = "2024"

[workspace.dependencies]
# Workspace internal dependencies
dusk-consensus = { version = "1.6.0", path = "./consensus/" }
dusk-core = { version = "1.6.0", path = "./core/" }
dusk-vm = { version = "1.6.0", path = "./vm/" }
node = { version = "1.6.0", path = "./node/", package = "dusk-node" }
node-data = { version = "1.6.0", path = "./node-data/", package = "dusk-node-data" }
rusk-profile = { version = "1.6.0", path = "./rusk-profile/" }
rusk-prover = { version = "1.6.0", path = "./rusk-prover/" }
rusk-recovery = { version = "1.6.0", path = "./rusk-recovery/" }
wallet-core = { version = "1.6.0", path = "./wallet-core/", package = "dusk-wallet-core" }

dusk-data-driver = { version = "0.3.2-alpha.1", path = "./data-drivers/data-driver" }
# dusk-data-driver = "0.3.1"
dusk-transfer-contract-dd = { version = "0.3.1-alpha.1", path = "./data-drivers/transfer-contract" }
# dusk-transfer-contract-dd = "0.3.0"
dusk-stake-contract-dd = { version = "0.3.1-alpha.1", path = "./data-drivers/stake-contract" }
# dusk-stake-contract-dd = "0.3.0"

# Dusk dependencies outside the workspace
bls12_381-bls = { version = "0.6.0-rc.0", default-features = false }
dusk-bls12_381 = { version = "0.14", default-features = false }
dusk-bytes = "0.1.7"
dusk-jubjub = { version = "0.15.1", default-features = false }
dusk-merkle = "0.6.0-rc.0"
dusk-plonk = { version = "0.22.0-rc.0", default-features = false, features = ["legacy-proving"] }
dusk-poseidon = "0.42.0-rc.0"
jubjub-schnorr = { version = "0.7.0-rc.0", default-features = false }
kadcast = "0.8.0-rc.0"
phoenix-circuits = { version = "0.8.0-rc.0", default-features = false }
phoenix-core = { version = "0.35.0-rc.0", default-features = false }
piecrust = "0.30.0-rc.0"
piecrust-uplink = "0.20.0-rc.0"
poseidon-merkle = "0.9.0-rc.0"
dusk-wasmtime = { version = "21.0.0-alpha", default-features = false, features = [
    "cranelift",
    "runtime",
    "parallel-compilation",
] }
# External dependencies
aes = "0.7.5"
aes-gcm = "0.10.3"
anyhow = "1.0.89"
ark-bn254 = { version = "0.4", default-features = false }
ark-groth16 = { version = "0.4", default-features = false }
ark-relations = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
async-channel = "1.9"
async-graphql = "5.0.10"
async-trait = "0.1.83"
base64 = "0.22.1"
blake2b_simd = { version = "=1.0.3", default-features = false }                 # 1.0.4 requires rustc edition 2024
blake3 = { version = "1.5.4", default-features = false }
block-modes = "0.8.1"
bs58 = "0.4"
bytecheck = { version = "0.6.12", default-features = false }
c-kzg = "=2.0.0"
secp256k1 = { version = "0.31.1", features = ["recovery"] }
cargo_toml = "0.22.3"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = "4.4.18"
console = "0.12"
criterion = "0.5.1"
crossterm = "0.25"
dirs = "4.0"
dlmalloc = "0.2.6"
fake = "2.9.2"
ff = { version = "0.13", default-features = false }
flate2 = "1.0.33"
flume = "0.10.14"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
hkdf = "0.12.3"
http-body-util = "0.1.2"
http_req = "0.8.1"
humantime-serde = "1.1.1"
hyper = "1.4.1"
hyper-tungstenite = "0.13"
hyper-util = "0.1.9"
indexmap = "=2.11"                                                              # 2.12 requires rustc edition 2024
inquire = "0.7.5"
k256 = { version = "0.13", default-features = false, features = ["alloc"] }
konst = "0.3.9"
lazy_static = "1.5"
lru = "0.16.3"
memory-stats = "1.2"
metrics = "0.22.3"
metrics-exporter-prometheus = "0.14"
native-tls = { version = "<0.2.14" }                                            # 0.2.14 requires rustc 1.80.0
num-bigint = { version = "0.4.6", default-features = false }
once_cell = "1.19"
open = "2.1.3"
parking_lot = "0.12.3"
pbkdf2 = "0.12.2"
pin-project = "1.1.5"
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
reqwest = "0.12.7"
ringbuffer = "0.15"
rkyv = { version = "0.7.39", default-features = false }
rocksdb = { version = "0.22", default-features = false }
rustc_tools_util = "0.3"
rustls-pemfile = "2.1.3"
semver = "1.0.23"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
serde_with = { version = "3.9", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sha3 = "0.10.8"
smallvec = "1.13.2"
sqlx = "0.8.2"
tar = "0.4.42"
tempfile = "3.12"
thiserror = "1.0.64"
time-util = "0.3.4"
tiny-bip39 = "0.8.2"
tokio = "1.42.1"
tokio-rustls = "0.26"
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
toml = "0.7.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.2"
tungstenite = "0.21"
url = "2.5.7"
version_check = "0.9.5"
wasmparser = "0.240"
zeroize = { version = "1.8.1", default-features = false }
zip = { version = "4.6", default-features = false }                             # newer versions require rustc 1.83.0

[profile.dev.build-override]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.release.build-override]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.release.package.rusk-wallet]
overflow-checks = true

[patch.crates-io]
# Pin AEGIS cryptography/runtime dependencies to private mirrors carrying the
# merged remediation set.
dusk-plonk = { git = "https://github.com/dusk-network/plonk-private.git", rev = "55083f925935b67b116c089e186ee1b261e0fdf0" }
bls12_381-bls = { git = "https://github.com/dusk-network/bls12_381-bls-private.git", rev = "2bbf457d31d83df92f3afeca8e9fc72c3d33545b" }
dusk-jubjub = { git = "https://github.com/dusk-network/jubjub-private.git", rev = "6e2b63f59edac8afa4f81a28b12d88529af37cdb" }
jubjub-elgamal = { git = "https://github.com/dusk-network/jubjub-elgamal-private.git", rev = "1f0d481fb29282c69fdc0063a0404cb89a53bd10" }
piecrust = { git = "https://github.com/dusk-network/piecrust-private.git", rev = "66ddb31693ffb0fd5a4faac3c80930e6228e0836" }
piecrust-uplink = { git = "https://github.com/dusk-network/piecrust-private.git", rev = "66ddb31693ffb0fd5a4faac3c80930e6228e0836" }
phoenix-core = { git = "https://github.com/dusk-network/phoenix-private.git", rev = "3d5b9838d7e824b441c93de9aaa38737263b97bd" }
phoenix-circuits = { git = "https://github.com/dusk-network/phoenix-private.git", rev = "3d5b9838d7e824b441c93de9aaa38737263b97bd" }
