[package]
name = "dusk-consensus"
version = "0.1.1-rc.3"
edition = "2021"
repository = "https://github.com/dusk-network/rusk"
description = "An implementation of Succinct Attestation consensus protocol"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["consensus", "dusk", "cryptocurrency", "blockchain"]
license = "MPL-2.0"
exclude = [".github/*", ".gitignore", ".env", ".vscode", "Cargo.lock"]

[lib]
path = "src/lib.rs"

[dependencies]
rand_core = { version = "0.6", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.2"
tracing = "0.1"
dusk-bls12_381-sign = { version = "0.5" }
sha3 = { version = "0.10" }
num-bigint = { version = "0.4.3", default-features = false }
hex = { version = "0.4.3" }
libmath = { version = "0.2.1" }
dusk-bytes = "0.1"
bytes = "0.6.0"
async-channel = "1.7.1"
async-trait = "0.1"
anyhow = "1.0"
node-data = { version = "0.1", path = "../node-data" }
dusk-merkle = { version = "0.5", features = ["size_32"] }
thiserror = "1"

[dev-dependencies]
hex-literal = { version = "0.3.4" }
clap = "2.33.3"
rustc_tools_util = "0.2"
kadcast = "0.4.1"
blake2 = "0.10.5"
blake3 = "1.3"
block-modes = "0.8"
aes = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
