[package]
name = "dusk-consensus"
version = "0.1.1-rc.3"
edition = "2021"
repository = "https://github.com/dusk-network/rusk"
description = "An implementation of Succinct Attestation consensus protocol"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["consensus", "dusk", "cryptocurrency", "blockchain"]
license = "MPL-2.0"
exclude = [".github/*", ".gitignore", ".env", ".vscode", "Cargo.lock"]

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
sha3 = { workspace = true }
num-bigint = { workspace = true }
hex = { workspace = true }
dusk-bytes = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
node-data = { workspace = true }
execution-core = { workspace = true, features = ["parallel"] }
dusk-merkle = { workspace = true, features = ["size_32"] }
thiserror = { workspace = true }
rkyv = { workspace = true,  features = ["size_32"] }
bytecheck = { workspace = true }

[dev-dependencies]
node-data = { workspace = true, features = ["faker"]}
criterion = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }

[[bench]]
name = "merkle"
harness = false

