[package]
name = "execution-core"
version = "0.1.0"
edition = "2021"

[dependencies]
dusk-bls12_381 = { version = "0.13", default-features = false, features = ["rkyv-impl"] }
dusk-jubjub = { version = "0.14", default-features = false, features = ["rkyv-impl"] }
dusk-poseidon = "0.40"
bls12_381-bls = { version = "0.4", default-features = false, features = ["rkyv-impl"] }
jubjub-schnorr = { version = "0.5", default-features = false, features = ["rkyv-impl"] }
phoenix-core = { version = "0.32", default-features = false, features = ["rkyv-impl", "alloc"] }
phoenix-circuits = { version = "0.4", default-features = false }
poseidon-merkle = { version = "0.7", features = ["rkyv-impl"] }
piecrust-uplink = { version = "0.17" }
dusk-bytes = "0.1"
rkyv = { version = "0.7", default-features = false,  features = ["size_32"] }
bytecheck = { version = "0.6", default-features = false }
rand = { version = "0.8", default-features = false }
ff = { version = "0.13", default-features = false }

# zk-dependencies

# `ark-groth` has a `parallel` feature, but we can't turn it on since it brings
# in `std` for contracts, even when we don't technically use it. This is due to
# Cargo's poor dependency resolution in our regime.
ark-groth16 = { version = "0.4", default-features = false, features = [], optional = true }
ark-bn254 = { version = "0.4", default-features = false, features = ["curve"], optional = true }
ark-relations = { version = "0.4", default-features = false, features = [], optional = true }
ark-serialize = { version = "0.4", default-features = false, features = [], optional = true }

dusk-plonk = { version = "0.20", default-features = false, features = ["rkyv-impl", "alloc"], optional = true }

[dev-dependencies]
rand = "0.8"

[features]
# It enables parallel thread aggregation of BlsPublicKey
parallel = ["bls12_381-bls/parallel"]

# It enables zk-capabilities
zk = [
    "ark-groth16",
    "ark-bn254",
    "ark-relations",
    "ark-serialize",
    "dusk-plonk",
    "phoenix-circuits/plonk"
]

# Enables std feature for dusk-plonk
std = ["dusk-plonk/std"]
