[package]
name = "dusk-node-data"
version = "1.3.1-alpha.1"
edition = "2021"

description = "Types used for interacting with Dusk node."
license = "MPL-2.0"
repository = "https://github.com/dusk-network/rusk"

[dependencies]
dusk-bytes = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true, features = ["std_rng", "getrandom"] }
hex = { workspace = true }
dusk-core = { workspace = true, features = ["serde"] }

serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["hex", "base64"] }
base64 = { workspace = true }
async-channel = { workspace = true }
chrono = { workspace = true }
bs58 = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
wallet-fs = { workspace = true }

# faker feature dependencies
fake = { workspace = true, features = ['derive'], optional = true }

[dev-dependencies]
fake = { workspace = true, features = ['derive'] }

[features]
faker = ["dep:fake"]
