[package]
name = "node"
version = "0.1.0"
edition = "2021"
autobins = false
description = "An implementation of dusk-blockchain node in pure Rust"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["dusk", "cryptocurrency", "blockchain", "node"]
license = "MPL-2.0"

[dependencies]
tracing = "0.1"
hex = "0.4"
dusk-consensus = { version = "0.1.1-rc.3", path = "../consensus" }
kadcast = "0.7.0-rc"
sha3 = { version = "0.10" }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
async-channel = "1.7"

rkyv = "0.7"

rocksdb_lib = { package = "rocksdb", version = "0.22", default-features = false }
dusk-bytes = "^0.1"
node-data = { version = "0.1", path = "../node-data" }
execution-core = { version = "0.1.0", path = "../execution-core" }
blake2 = "0.10.5"
console-subscriber = { version = "0.1.8", optional = true }
smallvec = "1.10.0"

serde = "1.0"
humantime-serde = "1"
thiserror = "1"
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
memory-stats = "1.0"

[dev-dependencies]
fake = { version = "2.5", features = ['derive'] }
node-data = { version = "0.1", path = "../node-data", features = ["faker"] }
rand = "0.8"
rand_core = "0.6"
tempdir = "0.3"
criterion = { version = "0.5", features = ["async_futures"] }

[features]
with_telemetry = ["dep:console-subscriber"]


[[bench]]
name = "accept"
harness = false
