[package]
name = "dusk-node"
version = "1.0.2-alpha.1"
edition = "2021"
autobins = false
repository = "https://github.com/dusk-network/rusk"
description = "An implementation of dusk-blockchain node in pure Rust"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["dusk", "cryptocurrency", "blockchain", "node"]
license = "MPL-2.0"

[dependencies]
tracing = { workspace = true }
hex = { workspace = true }
dusk-consensus = { workspace = true }
kadcast = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-channel = { workspace = true }
time-util = { workspace = true, features = ["chrono"] }

rkyv = { workspace = true }

rocksdb = { workspace = true }
dusk-bytes = { workspace = true }
node-data = { workspace = true }
dusk-core = { workspace = true }
smallvec = { workspace = true }

serde = { workspace = true }
humantime-serde = { workspace = true }
thiserror = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
memory-stats = { workspace = true }

# archive feature dependencies
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "migrate",
], optional = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, features = ["hex"], optional = true }

[dev-dependencies]
fake = { workspace = true, features = ['derive'] }
node-data = { workspace = true, features = ["faker"] }
rand = { workspace = true }
tempdir = { workspace = true }
criterion = { workspace = true, features = ["async_futures"] }

[features]
with_telemetry = []
archive = ["dep:sqlx", "dep:serde_json", "dep:serde_with"]
network-trace = []

[[bench]]
name = "accept"
harness = false
