[package]
name = "rusk-abi"
version = "0.13.0-rc.0"
edition = "2021"

repository = "https://github.com/dusk-network/rusk"
description = "The ABI to develop Dusk Network smart contracts"
license = "MPL-2.0"
exclude = [".github/workflows/ci.yml", ".gitignore"]

[dependencies]
blake2b_simd = { version = "1", default-features = false }

dusk-poseidon = "0.39"
dusk-bytes = "0.1"
bytecheck = { version = "0.6", default-features = false }

piecrust-uplink = { version = "0.16" }
piecrust = { version = "0.23", optional = true }

execution-core = { version = "0.1.0", path = "../execution-core", features = ["zk"] }

# These are patches since these crates don't seem to like semver.
rkyv = { version = "=0.7.39", default-features = false, features = ["size_32"] }

lru = { version = "0.12", optional = true }

[dev-dependencies]
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
once_cell = "1.15"
ff = { version = "0.13", default-features = false }

[features]
# By default, we include the contract writing features.
default = ["abi", "dlmalloc"]

# These are the features available for when one wishes to use `rusk-abi` as a
# contract.
abi = ["piecrust-uplink/abi"]
debug = ["abi", "piecrust-uplink/debug"]
dlmalloc = ["piecrust-uplink/dlmalloc"]

# These are the features available for when one wishes to use `rusk-abi` as a
# host.
host = ["piecrust", "lru"]
host_debug = ["piecrust/debug", "lru"]

[[test]]
name = "test-rusk-abi"
path = "tests/lib.rs"
required-features = ["host"]
